--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <h4>對我們課程有興趣嗎？<br>歡迎留下您的資料</h4>
             <div class="form">
                 <form action="index.html">
-                    <textarea name="content" id="content" rows="19"></textarea>
+                    <textarea name="content" id="content"></textarea>
                 </form>
                 <form action="index.html">
                     <label for="name">姓名</label><br>
